--- a/hw-2/mthe-474-hw-2-q-1.tex
+++ b/hw-2/mthe-474-hw-2-q-1.tex
@@ -11,6 +11,7 @@
   assignmentname={Homework \homeworknumber},
   studentnumber=20053722,
   name={Bryan Hoang},
+  draft,
   % final,
 ]{
   ltxanswer%
