--- a/hw-3/mthe-474-hw-3-q-4.tex
+++ b/hw-3/mthe-474-hw-3-q-4.tex
@@ -23,9 +23,17 @@
   \begin{questions}
     \setcounter{question}{\questionnumber}
     \addtocounter{question}{-1}
-    \question[0]{}
-    \begin{solution}
-      42.
-    \end{solution}
+    \question[10]\
+    \begin{parts}
+      \part{}
+      \begin{solution}
+        42.
+      \end{solution}
+
+      \part{}
+      \begin{solution}
+        42.
+      \end{solution}
+    \end{parts}
   \end{questions}
 \end{document}
