feat(hw-3): finish q-1 and q-2

--- a/hw-3/mthe-474-hw-3-q-1.tex
+++ b/hw-3/mthe-474-hw-3-q-1.tex
@@ -27,7 +27,7 @@
     \begin{parts}
       \part{}
       \begin{solution}
-        \(C=\{01,010,101\}\) is \textbf{not UD} since, for example, suppose we have that
+        \(\mathcal{C}=\{01,010,101\}\) is \textbf{not UD} since, for example, suppose we have that
         \begin{align*}
           a_{1} &\to 10   \\
           a_{2} &\to 010  \\
@@ -42,22 +42,22 @@
 
       \part{}
       \begin{solution}
-        \(C=\{0,01,011,0111\}\) is \textbf{UD} since it is a suffix code.
+        \(\mathcal{C}=\{0,01,011,0111\}\) is \textbf{UD} since it is a suffix code.
       \end{solution}
 
       \part{}
       \begin{solution}
-        \(C=\{21,20,201,202,212\}\) is \textbf{UD} since it is a suffix code.
+        \(\mathcal{C}=\{21,20,201,202,212\}\) is \textbf{UD} since it is a suffix code.
       \end{solution}
 
       \part{}
       \begin{solution}
-        \(C=\{1,21,221,002,021,001\}\) is \textbf{UD} since it is a prefix code.
+        \(\mathcal{C}=\{1,21,221,002,021,001\}\) is \textbf{UD} since it is a prefix code.
       \end{solution}
 
       \part{}
       \begin{solution}
-        \(C=\{10,12,13,22,121,133,220,221,223\}\) is \textbf{UD} since it is a suffix code.
+        \(\mathcal{C}=\{10,12,13,22,121,133,220,221,223\}\) is \textbf{UD} since it is a suffix code.
       \end{solution}
     \end{parts}
   \end{questions}
